--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ left:59px;top:58px;width:701px;height:303px'>
   <p class=MsoNormal><span lang=en-US style='font-size:28.0pt;line-height:119%;
   font-family:Calibri;language:en-US'>Pretend this is a pretty flyer from Tricida!</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:28.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>Here is some information on ULTIMA-CKD! It’s a fantastic Registry study...you really want to be part of it!</span></p>
+  font-family:Calibri;language:en-US'>Here is some information on ULTIMA-CKD! Itâ€™s a fantastic Registry study...you really want to be part of it!</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:28.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>We’re gonna have a great logo here, too!</span></p>
+  font-family:Calibri;language:en-US'>Weâ€™re gonna have a great logo here, too!</span></p>
   </div>
   <![if !vml]></td>
  </tr>
@@ -183,7 +183,7 @@ left:56px;top:551px;width:303px;height:392px'>
   <div v:shape="_x0000_s1027" style='padding:4.88pt 4.88pt 4.88pt 4.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>Let’s also give a shout-out for our Spotlight Session:</span></p>
+  font-family:Calibri;language:en-US'>Letâ€™s also give a shout-out for our Spotlight Session:</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
   font-family:Calibri;language:en-US'>Date</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
@@ -191,9 +191,9 @@ left:56px;top:551px;width:303px;height:392px'>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
   font-family:Calibri;language:en-US'>Location</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>Etc., etc., etc…</span></p>
+  font-family:Calibri;language:en-US'>Etc., etc., etcâ€¦</span></p>
   <p class=MsoNormal><span lang=en-US style='font-size:18.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>Come one, come all! Don’t be late. And we’ll feed you!</span></p>
+  font-family:Calibri;language:en-US'>Come one, come all! Donâ€™t be late. And weâ€™ll feed you!</span></p>
   </div>
   <![if !vml]></td>
  </tr>
@@ -225,7 +225,7 @@ left:416px;top:555px;width:337px;height:107px'>
   <div v:shape="_x0000_s1028" style='padding:2.88pt 2.88pt 2.88pt 2.88pt'
   class=shape>
   <p class=MsoNormal><span lang=en-US style='font-size:12.0pt;line-height:119%;
-  font-family:Calibri;language:en-US'>Interested in being a registry site?  To complete the Feasibility Form, click </span><a
+  font-family:Calibri;language:en-US'>Interested in being a registry site?Â  To complete the Feasibility Form, click </span><a
   href="https://www.surveymonkey.com/r/MA-CKD_Registry"><span lang=en-US
   style='font-size:12.0pt;line-height:119%;font-family:Calibri;text-decoration:
   underline;language:en-US'>here</span></a><span lang=en-US style='font-size:
